--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -4,3 +4,10 @@
     font-family: 'Copse', serif;
     font-size: 20px;
 }
+
+.content {
+    padding: 0;
+    margin: 64px auto 0px;
+    max-width: 80%;
+    min-width: 50%;
+}
