--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -7,8 +7,8 @@
 
 .content {
     padding: 0;
-    margin: 64px auto 0px;
-    max-width: 80%;
+    margin: 64px auto 20px;;
+    max-width: 85%;
     min-width: 50%;
 }
 
